--- a/NotasAlumnosFX/src/Vista/MenuEvaluacion.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuEvaluacion.fxml
@@ -7,39 +7,40 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="509.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuEvaluacionController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1024.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuEvaluacionController">
     <stylesheets>
         <URL value="@menuevaluacion.css" />
     </stylesheets>
    <children>
-      <Label layoutX="226.0" layoutY="24.0" text="Registo de Actividades" />
-      <Label layoutX="68.0" layoutY="171.0" text="Nombre: " />
-      <Label layoutX="333.0" layoutY="94.0" text="Curso:" />
-      <Label layoutX="68.0" layoutY="94.0" text="Bimestre:" />
-      <Label layoutX="72.0" layoutY="50.0" text="Grado:" />
-      <Label layoutX="196.0" layoutY="50.0" text="Sección:" />
-      <Label layoutX="68.0" layoutY="130.0" text="Tipo:" />
-      <Label layoutX="323.0" layoutY="130.0" text="Ponderación:" />
-      <Button layoutX="167.0" layoutY="206.0" mnemonicParsing="false" onAction="#btnGuardar" text="Guardar" />
-      <Button layoutX="276.0" layoutY="206.0" mnemonicParsing="false" onAction="#btnActualizar" text="Actualizar" />
-      <ChoiceBox fx:id="conCurso" layoutX="405.0" layoutY="90.0" prefWidth="150.0" />
-      <ChoiceBox fx:id="conBimestre" layoutX="150.0" layoutY="90.0" prefWidth="150.0" />
-      <Label fx:id="rGrado" layoutX="129.0" layoutY="50.0" text="Primero" />
-      <Label fx:id="rSeccion" layoutX="252.0" layoutY="50.0" text="A" />
-      <ChoiceBox fx:id="conTipo" layoutX="150.0" layoutY="126.0" prefWidth="150.0" />
-      <TextField fx:id="txtNombre" layoutX="152.0" layoutY="167.0" />
-      <TextField fx:id="txtPonderacion" layoutX="405.0" layoutY="126.0" />
-      <Label layoutX="24.0" layoutY="246.0" text="Listar Actividades " />
-      <TableView fx:id="tblPersona" layoutX="8.0" layoutY="273.0" onMouseClicked="#seleccionaModificar" prefHeight="216.0" prefWidth="586.0">
+      <Label layoutX="98.0" layoutY="21.0" text="Registo de Actividades" />
+      <Label layoutX="51.0" layoutY="216.0" text="Nombre: " />
+      <Label layoutX="83.0" layoutY="170.0" text="Curso:" />
+      <Label layoutX="57.0" layoutY="87.0" text="Bimestre:" />
+      <Label layoutX="24.0" layoutY="53.0" text="Grado:" />
+      <Label layoutX="216.0" layoutY="53.0" text="Sección:" />
+      <Label layoutX="90.0" layoutY="131.0" text="Tipo:" />
+      <Label layoutX="19.0" layoutY="336.0" text="Ponderación:" />
+      <Button layoutX="37.0" layoutY="421.0" mnemonicParsing="false" onAction="#btnGuardar" text="Guardar" />
+      <Button layoutX="212.0" layoutY="421.0" mnemonicParsing="false" onAction="#btnActualizar" text="Actualizar" />
+      <ChoiceBox fx:id="conCurso" layoutX="150.0" layoutY="166.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="conBimestre" layoutX="150.0" layoutY="82.0" prefWidth="150.0" />
+      <Label fx:id="rGrado" layoutX="90.0" layoutY="55.0" text="Primero" />
+      <Label fx:id="rSeccion" layoutX="300.0" layoutY="54.0" text="A" />
+      <ChoiceBox fx:id="conTipo" layoutX="150.0" layoutY="125.0" prefWidth="150.0" />
+      <TextField fx:id="txtNombre" layoutX="140.0" layoutY="210.0" />
+      <TextField fx:id="txtPonderacion" layoutX="136.0" layoutY="333.0" />
+      <Label layoutX="121.0" layoutY="257.0" text="Listar Actividades " />
+      <TableView fx:id="tblPersona" layoutX="390.0" layoutY="20.0" onMouseClicked="#seleccionaModificar" prefHeight="216.0" prefWidth="586.0">
          <columns>
-            <TableColumn fx:id="tblEvaluacionId" text="id Actividad" />
-            <TableColumn fx:id="tblCurso" prefWidth="159.0" text="Curso" />
-            <TableColumn fx:id="tblNombreActividad" prefWidth="173.0" text="Nombre Actividad" />
-            <TableColumn fx:id="tblPonderacionActividad" prefWidth="88.0" text="Ponderación" />
-            <TableColumn fx:id="tblTipoActividad" prefWidth="85.0" text="Tipo" />
+            <TableColumn fx:id="tblEvaluacionId" prefWidth="67.0" text="id Actividad" />
+            <TableColumn fx:id="tblCurso" prefWidth="153.0" text="Curso" />
+            <TableColumn fx:id="tblNombreActividad" prefWidth="192.0" text="Nombre Actividad" />
+            <TableColumn fx:id="tblPonderacionActividad" prefWidth="127.0" text="Ponderación" />
+            <TableColumn fx:id="tblTipoActividad" prefWidth="74.0" text="Tipo" />
          </columns>
       </TableView>
-      <ChoiceBox fx:id="conPorUnidad" layoutX="129.0" layoutY="242.0" prefWidth="150.0" />
-      <ChoiceBox fx:id="conPorCurso" layoutX="300.0" layoutY="242.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="conPorUnidad" layoutX="37.0" layoutY="285.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="conPorCurso" layoutX="202.0" layoutY="285.0" prefWidth="150.0" />
+      <Button layoutX="127.0" layoutY="486.0" mnemonicParsing="false" onAction="#btnAtras" text="Atrás" />
    </children>
 </AnchorPane>
