--- a/NotasAlumnosFX/src/Vista/menunotas.css
+++ b/NotasAlumnosFX/src/Vista/menunotas.css
@@ -1,7 +1,71 @@
-/*
- * Empty Stylesheet file.
- */
-
 .mainFxmlClass {
-
+    -fx-background-image: url("../Imagenes/FondoRealxd.png");
+    -fx-background-repeat: no-repeat;
+    -fx-background-size: cover; 
+    -fx-background-position: center center;
 }
+
+.button{
+    -fx-font-size: 165%;
+    -fx-font-family: Arial;
+    -fx-text-fill: black;
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-pref-width: 150px;
+    -fx-pref-height: 40px;
+    -fx-background-radius: 15px;
+}
+
+.button:hover{
+    -fx-background-color: rgba(1,1,1,0.7);
+    -fx-text-fill: white;
+    
+}
+
+.label{
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 160%;
+    -fx-display: flex; 
+    -fx-alignment: center;
+}
+
+
+.text-field{
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 20px;
+    -fx-display: flex; 
+    -fx-alignment: center;
+}
+
+
+.text-field:hover{
+    -fx-background-color: rgba(265,256,256, 0.8);
+}
+
+.check-box{
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 20px;
+    -fx-display: flex; 
+    -fx-alignment: center;
+}
+
+.table-view{
+    -fx-font-size: 110%;
+    -fx-font-family: Arial;
+    -fx-text-fill: black;
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-pref-width: 590px;
+    -fx-pref-height: 550px;
+}
+.table-column{
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-font-family: Arial;
+}
+
+.column-header-background{
+    -fx-background-color: rgba(5,256,256,1);
+}
+
