--- a/NotasAlumnosFX/src/Vista/MenuNotas.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuNotas.fxml
@@ -7,36 +7,41 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1024.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuNotasController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1063.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuNotasController">
     <stylesheets>
         <URL value="@menunotas.css" />
     </stylesheets>
    <children>
-      <TableView fx:id="tblNotas" layoutX="404.0" layoutY="20.0" prefHeight="214.0" prefWidth="496.0">
+      <TableView fx:id="tblNotas" layoutX="404.0" layoutY="20.0" prefHeight="214.0" prefWidth="713.0">
          <columns>
-            <TableColumn fx:id="tbNombre" prefWidth="148.0" text="Nombre" />
-            <TableColumn fx:id="tbApellido" prefWidth="161.0" text="Apellido" />
-            <TableColumn fx:id="tbActividad" prefWidth="167.0" text="Actividad" />
-            <TableColumn fx:id="tbPunto" prefWidth="111.0" text="Nota" />
+            <TableColumn fx:id="tblCui" prefWidth="97.0" text="CUI" />
+            <TableColumn fx:id="tblCodPer" prefWidth="104.0" text="Codigo Personal" />
+            <TableColumn fx:id="tbNombre" prefWidth="82.0" text="Nombre" />
+            <TableColumn fx:id="tbApellido" prefWidth="106.0" text="Apellido" />
+            <TableColumn fx:id="tbActividad" prefWidth="108.0" text="Actividad" />
+            <TableColumn fx:id="tbPunto" prefWidth="92.0" text="Nota" />
          </columns>
       </TableView>
       <Button fx:id="btnModificar" layoutX="213.0" layoutY="402.0" mnemonicParsing="false" onAction="#modificar" text="Modificar" />
-      <Button fx:id="btnEliminar" layoutX="123.0" layoutY="473.0" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
       <Button fx:id="btnGuardar" layoutX="38.0" layoutY="402.0" mnemonicParsing="false" onAction="#guardar" text="Guardar" />
-      <TextField fx:id="txtNombre" layoutX="126.0" layoutY="97.0" />
-      <TextField fx:id="txtApellido" layoutX="126.0" layoutY="158.0" />
       <Label layoutX="34.0" layoutY="166.0" text="Apellido:" />
-      <Label layoutX="34.0" layoutY="105.0" text="Nombre:" />
-      <Label layoutX="70.0" layoutY="227.0" text="Curso:" />
+      <Label layoutX="32.0" layoutY="130.0" text="Nombre:" />
+      <Label layoutX="68.0" layoutY="239.0" text="Curso:" />
       <Label layoutX="251.0" layoutY="53.0" text="Seccion:" />
       <Label layoutX="38.0" layoutY="51.0" text="Grado: " />
       <Label layoutX="172.0" layoutY="26.0" text="Notas" />
-      <ChoiceBox fx:id="chCurso" layoutX="143.0" layoutY="222.0" prefHeight="31.0" prefWidth="187.0" />
+      <ChoiceBox fx:id="chCurso" layoutX="141.0" layoutY="234.0" prefHeight="31.0" prefWidth="187.0" />
       <ChoiceBox fx:id="chActividad" layoutX="143.0" layoutY="277.0" prefHeight="31.0" prefWidth="187.0" />
       <Label layoutX="38.0" layoutY="282.0" text="Actividad:" />
       <Label layoutX="38.0" layoutY="338.0" text="Nota:" />
       <TextField fx:id="txtNota" layoutX="98.0" layoutY="330.0" />
       <Label fx:id="rGrado" layoutX="109.0" layoutY="52.0" text="Primero" />
       <Label fx:id="rSeccion" layoutX="325.0" layoutY="55.0" prefHeight="7.0" prefWidth="44.0" text="A" />
+      <Label fx:id="txtNombre" layoutX="125.0" layoutY="130.0" text="Nombre" />
+      <Label fx:id="txtApelldio" layoutX="127.0" layoutY="166.0" text="Apellido" />
+      <Label fx:id="txtCui" layoutX="125.0" layoutY="99.0" text="cui" />
+      <Label layoutX="32.0" layoutY="99.0" text="CUI:" />
+      <Label layoutX="46.0" layoutY="201.0" text="Bimestre:" />
+      <ChoiceBox fx:id="conBimestre" layoutX="141.0" layoutY="197.0" prefHeight="31.0" prefWidth="187.0" />
    </children>
 </AnchorPane>
