--- a/NotasAlumnosFX/src/Vista/login.css
+++ b/NotasAlumnosFX/src/Vista/login.css
@@ -11,8 +11,13 @@
     -fx-text-fill: black;
     -fx-background-color: rgba(265,256,256,1);
     -fx-pref-width: 110px;
-    -fx-pref-height: 60px;
+    -fx-pref-height: 45px;
     -fx-background-radius: 25px;
+}
+
+#recucontra{
+    -fx-pref-width: 350px;
+    -fx-pref-height: 40px;
 }
 
 .button:hover{
