--- a/NotasAlumnosFX/src/Vista/menunotas.css
+++ b/NotasAlumnosFX/src/Vista/menunotas.css
@@ -1,5 +1,5 @@
 .mainFxmlClass {
-    -fx-background-image: url("../Imagenes/FondoRealxd.png");
+    -fx-background-image: url("../Imagenes/Fondorealxd.png");
     -fx-background-repeat: no-repeat;
     -fx-background-size: cover; 
     -fx-background-position: center center;
