--- a/NotasAlumnosFX/src/Vista/MenuDocente.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuDocente.fxml
@@ -21,7 +21,7 @@
       <Button layoutX="36.0" layoutY="316.0" mnemonicParsing="false" onAction="#btnInscripcion" text="Inscribir Estudiantes" />
       <Button layoutX="237.0" layoutY="316.0" mnemonicParsing="false" onAction="#btnRegistoActividades" text="Registar Actividades" />
       <Button layoutX="36.0" layoutY="387.0" mnemonicParsing="false" onAction="#btnRegistrarNotas" text="Registrar Notas" />
-      <Button layoutX="237.0" layoutY="387.0" mnemonicParsing="false" text="Imprimir Boletínes" />
+      <Button layoutX="237.0" layoutY="387.0" mnemonicParsing="false" onAction="#btnImprimirBoletines" text="Imprimir Boletínes" />
       <Button layoutX="237.0" layoutY="456.0" mnemonicParsing="false" onAction="#btnCerrarSesion" text="Cerrar sesión" />
       <Button fx:id="btnCambiarContrasenia" layoutX="36.0" layoutY="456.0" mnemonicParsing="false" onAction="#btnCambiarContrasenia" prefWidth="247.0" text="Cambiar Contraseña" />
    </children>
