--- a/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
@@ -11,7 +11,7 @@
       <Button defaultButton="true" layoutX="204.0" layoutY="349.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín en PDF" />
       <Label layoutX="152.0" layoutY="26.0" text="INGRESE CUI" />
       <TextField fx:id="txtCui" layoutX="250.0" layoutY="21.0" prefHeight="31.0" prefWidth="110.0" />
-      <TableView layoutX="30.0" layoutY="142.0" prefHeight="188.0" prefWidth="540.0">
+      <TableView fx:id="tblBoletin" layoutX="30.0" layoutY="142.0" prefHeight="188.0" prefWidth="540.0">
         <columns>
           <TableColumn fx:id="tabCurso" prefWidth="75.0" text="Curso" />
           <TableColumn fx:id="tbUniI" prefWidth="75.0" text="Unidad I" />
@@ -22,7 +22,7 @@
             <TableColumn fx:id="tbAprob" prefWidth="79.0" text="A/NO A" />
         </columns>
       </TableView>
-      <Button fx:id="btnBuscar" layoutX="368.0" layoutY="21.0" mnemonicParsing="false" text="Buscar" />
+      <Button layoutX="368.0" layoutY="21.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
       <Button fx:id="btnRegresar" layoutX="17.0" layoutY="349.0" mnemonicParsing="false" onAction="#btnRegresarAlMenuDocente" text="Regresar" />
       <Label layoutX="35.0" layoutY="62.0" text="Nombre" />
       <Label layoutX="30.0" layoutY="97.0" text="Apellido" />
