botones regresar corregido

--- a/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
@@ -23,7 +23,7 @@
         </columns>
       </TableView>
       <Button layoutX="251.0" layoutY="22.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
-      <Button fx:id="btnRegresar" layoutX="96.0" layoutY="447.0" mnemonicParsing="false" onAction="#btnRegresarAlMenuDocente" text="Regresar" />
+      <Button fx:id="btnRegresar" layoutX="96.0" layoutY="447.0" mnemonicParsing="false" onAction="#btnRegresar" text="Regresar" />
       <Label layoutX="35.0" layoutY="62.0" text="Nombre" />
       <Label layoutX="30.0" layoutY="97.0" text="Apellido" />
       <Label fx:id="lbApelldio" layoutX="84.0" layoutY="97.0" text="Apellido" />
