--- a/NotasAlumnosFX/src/Vista/menuboletin.css
+++ b/NotasAlumnosFX/src/Vista/menuboletin.css
@@ -1,12 +1,75 @@
 .mainFxmlClass {
-    -fx-background-image: url("../Imagenes/FondoRealGrande.png");
+    -fx-background-image: url("../Imagenes/Fondoreal.png");
     -fx-background-repeat: no-repeat;
     -fx-background-size: cover; 
     -fx-background-position: center center;
-}/*
- * Empty Stylesheet file.
- */
+}
 
-.mainFxmlClass {
+.button{
+    -fx-font-size: 140%;
+    -fx-font-family: Arial;
+    -fx-text-fill: black;
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-pref-width: 210px;
+    -fx-pref-height: 40px;
+    -fx-background-radius: 15px;
+}
 
+.button:hover{
+    -fx-background-color: rgba(1,1,1,0.7);
+    -fx-text-fill: white;
+    
+}
+
+.label{
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 120%;
+    -fx-display: flex; 
+    -fx-alignment: center;
+}
+
+#MENUADMIN{
+    -fx-font-size: 180%;
+}
+
+.text-field{
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 14px;
+    -fx-display: flex; 
+    -fx-alignment: center;
+    -fx-pref-width: 210px;
+    -fx-pref-height: 30px;
+}
+
+
+.text-field:hover{
+    -fx-background-color: rgba(265,256,256, 0.8);
+}
+
+.check-box{
+    -fx-text-fill: black;
+    -fx-font-family: Arial;
+    -fx-font-size: 20px;
+    -fx-display: flex; 
+    -fx-alignment: center;
+}
+
+.table-view{
+    -fx-font-size: 110%;
+    -fx-font-family: Arial;
+    -fx-text-fill: black;
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-pref-width: 990px;
+    -fx-pref-height: 550px;
+}
+.table-column{
+    -fx-background-color: rgba(265,256,256,1);
+    -fx-font-family: Arial;
+}
+
+.column-header-background{
+    -fx-background-color: rgba(5,256,256,1);
 }
