--- a/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuImprimirBoletin.fxml
@@ -6,33 +6,33 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="508.0" prefWidth="644.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuImprimirBoletinController">
+<AnchorPane id="AnchorPane" prefHeight="673.0" prefWidth="1024.0" stylesheets="@menuboletin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.MenuImprimirBoletinController">
    <children>
-      <Button defaultButton="true" layoutX="283.0" layoutY="447.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín en PDF" />
-      <Label layoutX="50.0" layoutY="26.0" text="INGRESE CUI" />
-      <TextField fx:id="txtCui" layoutX="128.0" layoutY="19.0" prefHeight="31.0" prefWidth="110.0" />
-      <TableView fx:id="tblBoletin" layoutX="30.0" layoutY="142.0" prefHeight="293.0" prefWidth="585.0">
+      <Button defaultButton="true" layoutX="739.0" layoutY="85.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín en PDF" />
+      <Label layoutX="35.0" layoutY="109.0" text="INGRESE CUI" />
+      <TextField fx:id="txtCui" layoutX="120.0" layoutY="102.0" prefHeight="31.0" prefWidth="110.0" />
+      <TableView fx:id="tblBoletin" layoutX="15.0" layoutY="140.0" prefHeight="293.0" prefWidth="585.0">
         <columns>
-          <TableColumn fx:id="tabCurso" prefWidth="75.0" text="Curso" />
-          <TableColumn fx:id="tbUniI" prefWidth="75.0" text="Unidad I" />
-            <TableColumn fx:id="tbUniII" prefWidth="75.0" text="Unidad II" />
-            <TableColumn fx:id="tbUniIII" prefWidth="77.0" text="Unidad III" />
-            <TableColumn fx:id="tbUniIV" prefWidth="79.0" text="Unidad IV" />
-            <TableColumn fx:id="tbProm" prefWidth="79.0" text="Promedio" />
-            <TableColumn fx:id="tbAprob" prefWidth="79.0" text="A/NO A" />
+          <TableColumn fx:id="tabCurso" prefWidth="236.0" text="Curso" />
+          <TableColumn fx:id="tbUniI" prefWidth="134.0" text="Unidad I" />
+            <TableColumn fx:id="tbUniII" prefWidth="140.0" text="Unidad II" />
+            <TableColumn fx:id="tbUniIII" prefWidth="124.0" text="Unidad III" />
+            <TableColumn fx:id="tbUniIV" prefWidth="149.0" text="Unidad IV" />
+            <TableColumn fx:id="tbProm" prefWidth="104.0" text="Promedio" />
+            <TableColumn fx:id="tbAprob" prefWidth="101.0" text="A/NO A" />
         </columns>
       </TableView>
-      <Button layoutX="251.0" layoutY="22.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
-      <Button fx:id="btnRegresar" layoutX="96.0" layoutY="447.0" mnemonicParsing="false" onAction="#btnRegresar" text="Regresar" />
-      <Label layoutX="35.0" layoutY="62.0" text="Nombre" />
-      <Label layoutX="30.0" layoutY="97.0" text="Apellido" />
-      <Label fx:id="lbApelldio" layoutX="84.0" layoutY="97.0" text="Apellido" />
-      <Label fx:id="lbNombre" layoutX="89.0" layoutY="62.0" text="Nombre" />
-      <Label layoutX="280.0" layoutY="71.0" text="Grado" />
-      <Label layoutX="276.0" layoutY="99.0" text="Seccion" />
-      <Label fx:id="lbSeccion" layoutX="331.0" layoutY="99.0" text="A" />
-      <Label fx:id="lbGrado" layoutX="326.0" layoutY="71.0" text="Primero" />
-      <ChoiceBox fx:id="chAlumnos" layoutX="420.0" layoutY="22.0" prefWidth="150.0" />
-      <Label layoutX="334.0" layoutY="26.0" text="Seleccionar" />
+      <Button layoutX="398.0" layoutY="34.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
+      <Button fx:id="btnRegresar" layoutX="739.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnRegresar" text="Regresar" />
+      <Label layoutX="35.0" layoutY="21.0" text="Nombre" />
+      <Label layoutX="30.0" layoutY="56.0" text="Apellido" />
+      <Label fx:id="lbApelldio" layoutX="120.0" layoutY="56.0" text="Apellido" />
+      <Label fx:id="lbNombre" layoutX="120.0" layoutY="21.0" text="Nombre" />
+      <Label layoutX="212.0" layoutY="56.0" text="Grado" />
+      <Label layoutX="206.0" layoutY="21.0" text="Seccion" />
+      <Label fx:id="lbSeccion" layoutX="280.0" layoutY="21.0" text="A" />
+      <Label fx:id="lbGrado" layoutX="280.0" layoutY="56.0" text="Primero" />
+      <ChoiceBox fx:id="chAlumnos" layoutX="457.0" layoutY="105.0" prefWidth="150.0" />
+      <Label layoutX="360.0" layoutY="109.0" text="Seleccionar" />
    </children>
 </AnchorPane>
