--- a/NotasAlumnosFX/src/Vista/MenuBoletin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuBoletin.fxml
@@ -12,31 +12,31 @@
         <URL value="@menuboletin.css" />
     </stylesheets>
    <children>
-      <Label layoutX="537.0" layoutY="496.0" text="Seleccionar" />
-      <ChoiceBox fx:id="chAlumnos" layoutX="631.0" layoutY="492.0" prefWidth="150.0" />
-      <Label fx:id="lbGrado" layoutX="554.0" layoutY="589.0" text="Primero" />
-      <Label fx:id="lbSeccion" layoutX="665.0" layoutY="589.0" text="A" />
-      <Label layoutX="644.0" layoutY="561.0" text="Seccion" />
-      <Label layoutX="554.0" layoutY="561.0" text="Grado" />
-      <Label fx:id="lbNombre" layoutX="418.0" layoutY="559.0" text="Nombre" />
-      <Label fx:id="lbApelldio" layoutX="418.0" layoutY="596.0" text="Apellido" />
-      <Label layoutX="313.0" layoutY="596.0" text="Apellido" />
-      <Label layoutX="312.0" layoutY="559.0" text="Nombre" />
-      <Button fx:id="btnRegresar" layoutX="55.0" layoutY="489.0" mnemonicParsing="false" onAction="#btnRegresar" text="Regresar" />
-      <Button layoutX="823.0" layoutY="489.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
-      <TableView fx:id="tblBoletin" layoutX="24.0" layoutY="22.0" prefHeight="293.0" prefWidth="585.0">
+      <Label layoutX="23.0" layoutY="339.0" text="Seleccionar" />
+      <ChoiceBox fx:id="chAlumnos" layoutX="148.0" layoutY="335.0" prefWidth="150.0" />
+      <Label fx:id="lbGrado" layoutX="208.0" layoutY="155.0" text="Primero" />
+      <Label fx:id="lbSeccion" layoutX="239.0" layoutY="210.0" text="A" />
+      <Label fx:id="txt4" layoutX="54.0" layoutY="210.0" text="Seccion" />
+      <Label fx:id="txt3" layoutX="54.0" layoutY="155.0" text="Grado" />
+      <Label fx:id="lbNombre" layoutX="205.0" layoutY="47.0" text="Nombre" />
+      <Label fx:id="lbApelldio" layoutX="207.0" layoutY="96.0" text="Apellido" />
+      <Label fx:id="txt2" layoutX="48.0" layoutY="96.0" text="Apellido" />
+      <Label fx:id="txt" layoutX="54.0" layoutY="47.0" text="Nombre" />
+      <Button fx:id="btnRegresar" layoutX="81.0" layoutY="512.0" mnemonicParsing="false" onAction="#btnRegresar" prefWidth="224.0" text="Regresar" />
+      <Button layoutX="81.0" layoutY="449.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
+      <TableView fx:id="tblBoletin" layoutX="376.0" layoutY="19.0" prefHeight="293.0" prefWidth="585.0">
          <columns>
-            <TableColumn fx:id="tabCurso" prefWidth="293.0" text="Curso" />
-            <TableColumn fx:id="tbUniI" prefWidth="131.0" text="Unidad I" />
-            <TableColumn fx:id="tbUniII" prefWidth="122.0" text="Unidad II" />
-            <TableColumn fx:id="tbUniIII" prefWidth="114.0" text="Unidad III" />
-            <TableColumn fx:id="tbUniIV" prefWidth="123.0" text="Unidad IV" />
-            <TableColumn fx:id="tbProm" prefWidth="88.0" text="Promedio" />
-            <TableColumn fx:id="tbAprob" prefWidth="98.0" text="A/NO A" />
+            <TableColumn fx:id="tabCurso" prefWidth="168.0" text="Curso" />
+            <TableColumn fx:id="tbUniI" prefWidth="68.0" text="Unidad I" />
+            <TableColumn fx:id="tbUniII" prefWidth="79.0" text="Unidad II" />
+            <TableColumn fx:id="tbUniIII" prefWidth="86.0" text="Unidad III" />
+            <TableColumn fx:id="tbUniIV" prefWidth="86.0" text="Unidad IV" />
+            <TableColumn fx:id="tbProm" prefWidth="76.0" text="Promedio" />
+            <TableColumn fx:id="tbAprob" prefWidth="91.0" text="A/NO A" />
          </columns>
       </TableView>
-      <TextField fx:id="txtCui" layoutX="808.0" layoutY="581.0" prefHeight="31.0" prefWidth="110.0" />
-      <Label layoutX="847.0" layoutY="542.0" text="INGRESE CUI" />
-      <Button defaultButton="true" layoutX="291.0" layoutY="490.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín en PDF" />
+      <TextField fx:id="txtCui" layoutX="133.0" layoutY="276.0" prefHeight="31.0" prefWidth="110.0" />
+      <Label layoutX="14.0" layoutY="282.0" text="INGRESE CUI" />
+      <Button defaultButton="true" layoutX="81.0" layoutY="391.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín en PDF" />
    </children>
 </AnchorPane>
