--- a/NotasAlumnosFX/src/Vista/cargardatos.css
+++ b/NotasAlumnosFX/src/Vista/cargardatos.css
@@ -1,5 +1,5 @@
 .mainFxmlClass {
-    -fx-background-image: url("../Imagenes/Fondorealxd.png");
+    -fx-background-image: url("../Imagenes/FondoCargarDatos.png");
     -fx-background-repeat: no-repeat;
     -fx-background-size: cover; 
     -fx-background-position: center center;
@@ -57,8 +57,8 @@
     -fx-font-family: Arial;
     -fx-text-fill: black;
     -fx-background-color: rgba(265,256,256,1);
-    -fx-pref-width: 590px;
-    -fx-pref-height: 550px;
+    -fx-pref-width: 630px;
+    -fx-pref-height: 560px;
 }
 .table-column{
     -fx-background-color: rgba(265,256,256,1);
@@ -68,4 +68,15 @@
 .column-header-background{
     -fx-background-color: rgba(5,256,256,1);
 }
-
+#txt{
+    -fx-font-size: 180%;
+}
+#txt2{
+    -fx-font-size: 180%;
+}
+#labGrado{
+    -fx-font-size: 180%;
+}
+#labSeccion{
+    -fx-font-size: 180%;
+}
