--- a/NotasAlumnosFX/src/Vista/MenuBoletin.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuBoletin.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.net.*?>
 <?import java.util.*?>
@@ -12,18 +13,21 @@
         <URL value="@menuboletin.css" />
     </stylesheets>
    <children>
-      <Label layoutX="23.0" layoutY="339.0" text="Seleccionar" />
-      <ChoiceBox fx:id="chAlumnos" layoutX="148.0" layoutY="335.0" prefWidth="150.0" />
-      <Label fx:id="lbGrado" layoutX="208.0" layoutY="155.0" text="Primero" />
-      <Label fx:id="lbSeccion" layoutX="239.0" layoutY="210.0" text="A" />
-      <Label fx:id="txt4" layoutX="54.0" layoutY="210.0" text="Seccion" />
-      <Label fx:id="txt3" layoutX="54.0" layoutY="155.0" text="Grado" />
-      <Label fx:id="lbNombre" layoutX="205.0" layoutY="47.0" text="Nombre" />
-      <Label fx:id="lbApelldio" layoutX="207.0" layoutY="96.0" text="Apellido" />
-      <Label fx:id="txt2" layoutX="48.0" layoutY="96.0" text="Apellido" />
-      <Label fx:id="txt" layoutX="54.0" layoutY="47.0" text="Nombre" />
+      <Label layoutX="25.0" layoutY="268.0" text="Seleccionar:">
+         <font>
+            <Font size="22.0" />
+         </font></Label>
+      <ChoiceBox fx:id="chAlumnos" layoutX="129.0" layoutY="264.0" prefHeight="30.0" prefWidth="195.0" />
+      <Label fx:id="lbGrado" layoutX="116.0" layoutY="155.0" text="Primero" />
+      <Label fx:id="lbSeccion" layoutX="116.0" layoutY="210.0" text="A" />
+      <Label fx:id="txt4" layoutX="20.0" layoutY="210.0" text="Seccion:" />
+      <Label fx:id="txt3" layoutX="35.0" layoutY="155.0" text="Grado:" />
+      <Label fx:id="lbNombre" layoutX="115.0" layoutY="47.0" text="Nombre" />
+      <Label fx:id="lbApelldio" layoutX="115.0" layoutY="96.0" text="Apellido" />
+      <Label fx:id="txt2" layoutX="21.0" layoutY="96.0" text="Apellido:" />
+      <Label fx:id="txt" layoutX="27.0" layoutY="47.0" text="Nombre:" />
       <Button fx:id="btnRegresar" layoutX="81.0" layoutY="512.0" mnemonicParsing="false" onAction="#btnRegresar" prefWidth="224.0" text="Regresar" />
-      <Button layoutX="81.0" layoutY="449.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
+      <Button layoutX="137.0" layoutY="383.0" mnemonicParsing="false" onAction="#btnBuscarBoletin" text="Buscar" />
       <TableView fx:id="tblBoletin" layoutX="376.0" layoutY="19.0" prefHeight="293.0" prefWidth="585.0">
          <columns>
             <TableColumn fx:id="tabCurso" prefWidth="168.0" text="Curso" />
@@ -35,8 +39,8 @@
             <TableColumn fx:id="tbAprob" prefWidth="91.0" text="A/NO A" />
          </columns>
       </TableView>
-      <TextField fx:id="txtCui" layoutX="133.0" layoutY="276.0" prefHeight="31.0" prefWidth="110.0" />
-      <Label layoutX="14.0" layoutY="282.0" text="INGRESE CUI" />
-      <Button defaultButton="true" layoutX="81.0" layoutY="391.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín en PDF" />
+      <TextField fx:id="txtCui" layoutX="129.0" layoutY="334.0" prefHeight="31.0" prefWidth="179.0" />
+      <Label layoutX="19.0" layoutY="341.0" text="BUSCAR CUI:" />
+      <Button defaultButton="true" layoutX="81.0" layoutY="441.0" mnemonicParsing="false" onAction="#btnImprimir" text="Imprimir boletín en PDF" />
    </children>
 </AnchorPane>
